--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/cezary/react-favicon",
   "peerDependencies": {
-    "react": ">=0.12.0 < 0.14.0"
+    "react": ">=0.12.0 < ^0.14.0"
   },
   "devDependencies": {
     "babel": "^5.1.10"
